--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rory-scovel-site",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/add_link_here",
+  "homepage": "https://gitname.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
